<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrayLight">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="@style/productContainer">
            <TextView
                android:layout_width="@dimen/width_max_field"
                android:layout_height="wrap_content"
                style="@style/AppTheme.TextView.Field.Require"
                android:text="@string/productId"/>
            <EditText
                android:id="@+id/txtId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/AppTheme.EditText"
                android:hint="@string/productId"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="@style/productContainer">
            <TextView
                android:layout_width="@dimen/width_max_field"
                android:layout_height="wrap_content"
                style="@style/AppTheme.TextView.Field.Require"
                android:text="@string/name"/>
            <EditText
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/AppTheme.EditText"
                android:hint="@string/name"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="@style/productContainer">
            <TextView
                android:layout_width="@dimen/width_max_field"
                android:layout_height="wrap_content"
                style="@style/AppTheme.TextView.Field"
                android:text="@string/purchaseName"/>
            <EditText
                android:id="@+id/purchaseName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/AppTheme.EditText"
                android:hint="@string/purchaseName"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rowProductType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="@style/productContainer">
            <TextView
                android:layout_width="@dimen/width_max_field"
                android:layout_height="wrap_content"
                style="@style/AppTheme.TextView.Field.Require"
                android:text="@string/productType"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/AppTheme.TextView.Value"
                android:text="@string/saleInventory"/>
            <ImageView
                android:layout_width="@dimen/ic_small"
                android:layout_height="@dimen/ic_small"
                android:src="@mipmap/ic_expand_arrow"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rowFieldServiceProductType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="@style/productContainer">
            <TextView
                android:layout_width="@dimen/width_max_field"
                android:layout_height="wrap_content"
                style="@style/AppTheme.TextView.Field.Require"
                android:text="@string/fieldServiceProductType"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/AppTheme.TextView.Value"
                android:text="@string/saleInventory"/>
            <ImageView
                android:layout_width="@dimen/ic_small"
                android:layout_height="@dimen/ic_small"
                android:src="@mipmap/ic_expand_arrow"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rowDefaultVendor0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="@style/productContainer">
            <TextView
                android:layout_width="@dimen/width_max_field"
                android:layout_height="wrap_content"
                style="@style/AppTheme.TextView.Field"
                android:text="@string/defaultVendor"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/AppTheme.TextView.Value"
                android:text="@string/clickToSelect"/>
            <ImageView
                android:layout_width="@dimen/ic_small"
                android:layout_height="@dimen/ic_small"
                android:src="@mipmap/ic_expand_arrow"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rowQuantityOnHand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="@style/productContainer"
            android:layout_marginBottom="@dimen/margin_small">
            <TextView
                android:layout_width="@dimen/width_max_field"
                android:layout_height="wrap_content"
                style="@style/AppTheme.TextView.Field"
                android:text="@string/quantityOnHand"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/AppTheme.TextView.Value"
                android:textColor="@color/colorGray"
                android:text="@string/none"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rowUnitGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="@style/productContainer">
            <TextView
                android:layout_width="@dimen/width_max_field"
                android:layout_height="wrap_content"
                style="@style/AppTheme.TextView.Field.Require"
                android:text="@string/unitGroup"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/AppTheme.TextView.Value"
                android:text="@string/clickToSelect"/>
            <ImageView
                android:layout_width="@dimen/ic_small"
                android:layout_height="@dimen/ic_small"
                android:src="@mipmap/ic_expand_arrow"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rowDefaultUnit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="@style/productContainer">
            <TextView
                android:layout_width="@dimen/width_max_field"
                android:layout_height="wrap_content"
                style="@style/AppTheme.TextView.Field.Require"
                android:text="@string/defaultUnit"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rowDefaultPriceList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="@style/productContainer">
            <TextView
                android:layout_width="@dimen/width_max_field"
                android:layout_height="wrap_content"
                style="@style/AppTheme.TextView.Field"
                android:text="@string/defaultPriceList"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rowDefaultVendor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="@style/productContainer">
            <TextView
                android:layout_width="@dimen/width_max_field"
                android:layout_height="wrap_content"
                style="@style/AppTheme.TextView.Field"
                android:text="@string/defaultVendor"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/AppTheme.TextView.Value"
                android:text="@string/clickToSelect"/>
            <ImageView
                android:layout_width="@dimen/ic_small"
                android:layout_height="@dimen/ic_small"
                android:src="@mipmap/ic_expand_arrow"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rowDecimalsSupported"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="@style/productContainer"
            android:layout_marginBottom="@dimen/margin_small">
            <TextView
                android:layout_width="@dimen/width_max_field"
                android:layout_height="wrap_content"
                style="@style/AppTheme.TextView.Field.Require"
                android:text="@string/decimalsSupported"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/AppTheme.TextView.Value"
                android:textColor="@color/colorGray"
                android:text="@string/none"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="@style/productContainer"
            android:layout_marginBottom="0dp">
            <TextView
                android:layout_width="@dimen/width_max_field"
                android:layout_height="wrap_content"
                style="@style/AppTheme.TextView.Field"
                android:text="@string/taxable"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/AppTheme.TextView.Value"
                android:layout_weight="1"
                android:text="@string/no"
                tools:text="@string/yes"/>

            <Switch
                android:id="@+id/switchTaxable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:checked="true"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>