<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/actSignIn"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/sign_in"
            android:textSize="@dimen/text_xlarge"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/userIdLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_id"
            android:textSize="@dimen/text_medium"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/userIdEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:nextFocusLeft="@id/userIdEdit"
            android:nextFocusUp="@id/userIdEdit"
            android:textSize="@dimen/text_large"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>

        <TextView
            android:id="@+id/passwordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/password"
            android:textSize="@dimen/text_medium" />


        <EditText
            android:id="@+id/passwordEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:nextFocusLeft="@id/passwordEdit"
            android:nextFocusUp="@id/passwordEdit"
            android:text="password"
            android:textSize="@dimen/text_large"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/actSignIn"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/signIn"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_medium" />
</RelativeLayout>
