<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/mainLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrayLight">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="@style/caseContainer">
            <TextView
                android:layout_width="@dimen/width_max_field"
                android:layout_height="wrap_content"
                style="@style/AppTheme.TextView.Field.Require"
                android:text="@string/name"/>
            <EditText
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/AppTheme.EditText"
                android:inputType="textCapWords"
                android:hint="@string/name"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="@style/caseContainer">
            <TextView
                android:layout_width="@dimen/width_max_field"
                android:layout_height="wrap_content"
                style="@style/AppTheme.TextView.Field"
                android:text="@string/caseNumber"/>
            <EditText
                android:id="@+id/txtCaseNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/AppTheme.EditText"
                android:inputType="number"
                android:hint="@string/caseNumber"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="@style/caseContainer">
            <TextView
                android:layout_width="@dimen/width_max_field"
                android:layout_height="wrap_content"
                style="@style/AppTheme.TextView.Field"
                android:text="@string/priority"/>
            <EditText
                android:id="@+id/txtPriority"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/AppTheme.EditText"
                android:inputType="textCapSentences"
                android:hint="@string/priority"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="@style/caseContainer">
            <TextView
                android:layout_width="@dimen/width_max_field"
                android:layout_height="wrap_content"
                style="@style/AppTheme.TextView.Field"
                android:text="@string/origin"/>
            <EditText
                android:id="@+id/txtOrigin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/AppTheme.EditText"
                android:inputType="textCapSentences"
                android:hint="@string/origin"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="@style/caseContainer">
            <TextView
                android:layout_width="@dimen/width_max_field"
                android:layout_height="wrap_content"
                style="@style/AppTheme.TextView.Field"
                android:text="@string/customer"/>
            <EditText
                android:id="@+id/txtCustomer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/AppTheme.EditText"
                android:inputType="textCapWords"
                android:hint="@string/customer"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="@style/caseContainer">
            <TextView
                android:layout_width="@dimen/width_max_field"
                android:layout_height="wrap_content"
                style="@style/AppTheme.TextView.Field"
                android:text="@string/statusReason"/>
            <EditText
                android:id="@+id/txtStatusReason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/AppTheme.EditText"
                android:inputType="textCapSentences"
                android:hint="@string/statusReason"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>